[package]
name = "rand"
version = "0.1.0"
authors = ["Simon Warta <simon@warta.it>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = ["cranelift"]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces", "cosmwasm-vm/backtraces"]
cranelift = ["cosmwasm-vm/default-cranelift"]
singlepass = ["cosmwasm-vm/default-singlepass"]

[dependencies]
cosmwasm-std = { git = "https://github.com/CosmWasm/cosmwasm", branch = "rand-patches" , features = ["iterator"] }
cosmwasm-storage = { git = "https://github.com/CosmWasm/cosmwasm", branch = "rand-patches" , features = ["iterator"] }
drand-verify = { git = "https://github.com/CosmWasm/drand-verify", rev = "fabe84cf81b22c378f4faa4c60d8380c70c61cc7" }
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
cosmwasm-vm = { git = "https://github.com/CosmWasm/cosmwasm", branch = "rand-patches", default-features = false, features = ["iterator"] }
cosmwasm-schema = { git = "https://github.com/CosmWasm/cosmwasm", branch = "rand-patches" }
hex = "0.4"
